# yuance

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
api/: .env.example  Cargo.toml  Dockerfile  README.md
api/migrations/: 202606260001_create_core_tables.sql  202606260002_create_project_management_tables.sql  202606260003_create_file_storage_tables.sql  202606290001_create_user_project_preferences.sql  202606290002_add_work_item_soft_delete.sql  202606290003_add_work_item_comment_soft_delete.sql  202607090001_update_project_status_lifecycle.sql  202607110001_add_work_item_comment_replies.sql  202607110002_create_notifications.sql  202607120001_add_file_folders.sql  202607120002_fix_file_folder_unique_name.sql  202607130001_add_work_item_comment_rich_text_fields.sql  202607130002_create_project_resources.sql  202607140001_create_api_tokens.sql  202607140002_add_api_token_actor_snapshots.sql  202607160001_create_refresh_sessions.sql  202607210001_create_project_cycles.sql  202607220001_add_api_token_ciphertext.sql  202607230001_add_author_display_snapshots.sql  202607230002_create_system_release_management.sql  202607230003_create_system_api_tokens.sql
api/src/: lib.rs  main.rs
api/src/app/: files.rs  migrate.rs  mod.rs  seed.rs  serve.rs
api/static/: app.css  app.js  document-preview.mjs
api/tests/: audit_flow.rs  auth_csrf_refresh_flow.rs  auth_security_flow.rs  bootstrap_flow.rs  cli_files_flow.rs  cli_migrate_flow.rs  cli_seed_flow.rs  project_management_flow.rs  routing_smoke.rs  storage_config_flow.rs  system_management_flow.rs
(+157 files in other folders)
