[package]
name = "yuance-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
argon2 = "0.5.3"
ammonia = "4.1.2"
askama = "0.16.0"
axum = "0.8.9"
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
csv = "1.4.0"
dotenvy = "0.15.7"
hex = "0.4.3"
hkdf = "0.12.4"
http = "1.4.2"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
opendal = { version = "0.57.0", features = ["services-memory", "services-oss"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqsign-aliyun-oss = "3.1.0"
reqsign-core = "3.0.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
